# api/openapi.yaml
@@ -1928,12 +1928,16 @@ components:
       properties:
         code:
           type: string
+        remember:
+          type: boolean
       type: object
     api.BrowserPasswordLoginRequest:
       properties:
         password:
           format: password
           type: string
+        remember:
+          type: boolean
         username:
           example: admin
           type: string
